src/test/deca/codegen/valid/object_simple_class_with_assigned_attribute.deca
/*
    Description : Classe avec un attribut affecté

    Résultat : OK
*/
class A{
    int u = 1;
}
