src/test/deca/codegen/invalid/non_object_underflow_float_to_int_cast.deca
/*
    Description : cast float vers int avec float trop grand

    Résultat: Erreur
*/
class A
{
    float x = -5000000000000.6;
    int z = (int)(x):
}
